2008-01-24  Karl Berry  <karl@gnu.org>

	* doc/info-stnd.texi (What is Info): that's C-x C-c to exit, not
	C-x C-x.  Report from Benno, 24 Jan 2008 00:40:04.

2008-01-23  Karl Berry  <karl@gnu.org>

	* makeinfo/insertion.c (begin_insertion) <direntry>: ignore
	whitespace beginning the first * line inside @direntry,
	to work around the zsh manual.
	Report from Norbert Preining, 14 Jan 2008 09:09:01.

2008-01-21  Karl Berry  <karl@gnu.org>

	* info/info.c (main): silently switch to info-stnd if given
	-O (--usage) info.
	Suggestion from Benno, 19 Jan 2008 19:58:47.

2008-01-20  Karl Berry  <karl@gnu.org>

	* install-info/install-info.c (print_help): split up big help string,
	some rewording.

2008-01-19  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (run_tex): use verbose, not echo, so -q is respected.
	Report from Kurt Hornik, 19 Jan 2008 11:16:27.

2008-01-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Other Info Directories): mention starting at 0
	and what-cursor-position when figuring column positions.

2008-01-16  Karl Berry  <karl@gnu.org>

	* util/texi2dvi (move_to_dest): compare with filenames, rather
	than cmp -s, since the output file might not actually change.
	Report from Ralf Wildenhues, 15 Jan 2008 07:20:34.

	* doc/texinfo.txi (Invoking makeinfo): --document-language default
	is @documentlanguage, as of 4.11.

	* doc/texinfo.txi (Makeinfo Pointer Creation): mention the 
	need for @detailmenu here, too.

2008-01-14  Karl Berry  <karl@gnu.org>

	* NEWS: install-info NEWS details.

2008-01-13  Bruno Haible  <bruno@clisp.org>

	* util/gendocs.sh (curdate): Execute 'date' command in the locale
	specified by SETLANG.

2008-01-12  Bruno Haible  <bruno@clisp.org>

	* doc/texinfo.txi (Cross Reference Parts): better description of arg2.
	bug-texinfo mail of 12 Jan 2008 15:52:23 +0100.

2008-01-02  Karl Berry  <karl@gnu.org>

	* info/info.c (info_short_help) [__MSDOS__]: puts -b string directly.
	Suggestion from Benno.

2008-01-02  Karl Berry  <karl@tug.org>